# fastapi-paseto

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: pages.yml  release.yml  tests.yml
docs/: api-doc.md  contributing.md  examples.md  index.md  supply-chain-security.md
docs/advanced-usage/: additional-claims.md  bigger-app.md  expiry_time.md  footer-assertion.md  generate-docs.md  key-management.md  overrides.md  purpose.md  validation.md
docs/configuration/: denylist.md  general.md  headers.md  secret-management.md
docs/usage/: basic.md  freshness.md  json.md  optional.md  refresh.md  revoking.md  websocket.md
examples/: additional_claims.py  basic.py  denylist.py  denylist_redis.py  footer_assertion.py  freshness.py  generate_doc.py  json_transport.py  key_management.py  optional.py  overrides.py  purpose.py  refresh.py  secure_secret_management.py  validation.py  websocket.py
examples/multiple_files/: app.py
fastapi_paseto_auth/: __init__.py
scripts/: docs-live.sh  generate-release-integrity-artifacts.sh  tests.sh
src/fastapi_paseto/: __init__.py  _version.py  auth_config.py  auth_paseto.py  config.py  exceptions.py
src/fastapi_paseto/_internal/: __init__.py  auth.py  request.py  token_helpers.py  transport.py
src/fastapi_paseto_auth/: auth_config.py  auth_paseto.py
tests/: conftest.py  test_config.py  test_decode_token.py  test_denylist.py  test_headers.py  test_json.py  test_overrides.py  test_paseto_features.py  test_url_protected.py  test_websocket.py
