[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "fastapi-paseto-auth"
version = "0.6.0"
description = "FastAPI extension that provides PASETO Auth support"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Neneko", email = "fastapi@nyu.moe" }
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "fastapi==0.85.0",
  "pyseto==1.9.1",
  "pydantic==1.10.25",
]

[project.urls]
Documentation = "https://chloe-ko.github.io/fastapi-paseto-auth/"
Source = "https://github.com/Chloe-ko/fastapi-paseto-auth"

[dependency-groups]
dev = [
  "anyio==3.6.1",
  "sniffio==1.3.0",
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "coveralls==4.0.1",
  "requests==2.28.1",
  "urllib3==1.26.12",
  "mkdocs>=1.1.2,<2.0.0",
  "mkdocs-material>=8.3.9,<9.0.0",
  "markdown-include>=0.7.0,<0.8.0",
  "uvicorn>=0.11.5"
]

