[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[project]
name = "fastapi-paseto"
version = "1.3.1"
description = "FastAPI extension that provides PASETO Auth support"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Raze Systems" },
  { name = "Alexandre Teles", email = "1757773+alexandreteles@users.noreply.github.com" }
]
maintainers = [
  { name = "Alexandre Teles", email = "1757773+alexandreteles@users.noreply.github.com" }
]
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "fastapi==0.135.1",
  "pyseto==1.9.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
]

[project.urls]
Source = "https://github.com/Raze-Systems/fastapi-paseto"
Issues = "https://github.com/Raze-Systems/fastapi-paseto/issues"

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "pytest-cov==6.2.1",
  "coveralls==4.0.1",
  "httpx>=0.28.1,<1.0.0",
  "mkdocs>=1.1.2,<2.0.0",
  "mkdocs-material>=8.3.9,<9.0.0",
  "markdown-include>=0.7.0,<0.8.0",
  "uvicorn>=0.11.5",
  "python-semantic-release==10.4.1",
]

[tool.semantic_release]
build_command = """
uv lock
uv build
uv run --python 3.14 mkdocs build --strict
"""
commit_message = "chore(release): v{version}"
commit_parser = "conventional"
tag_format = "v{version}"
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/fastapi_paseto/_version.py:__version__"]

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
mode = "update"
insertion_flag = "<!-- version list -->"

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
parse_squash_commits = true
ignore_merge_commits = true
